# NeuronBus

./: CLAUDE.md  Cargo.toml  README.md
benches/: throughput.rs
docs/: architecture.md  benchmarks.md  blog-post.md
examples/: ping_pong.rs  swarm.rs
src/: arena.rs  axon.rs  cortex.rs  lib.rs  neuron.rs  spike.rs  synapse.rs  transport.rs  wait.rs
