[package]
name = "neuronbus"
version = "0.1.0"
edition = "2021"
description = "Neuroscience-inspired ultra-fast messaging for AI agents"
license = "MIT"

[dependencies]
crossbeam-utils = "0.8"
memmap2 = "0.9"
parking_lot = "0.12"
quanta = "0.12"
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
mio = { version = "1", features = ["os-poll", "net"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false
